# human-research-scanning-system

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  bootstrap_python_and_start.bat  install_windows.bat  pyproject.toml  requirements-optional.txt  start_windows.bat  start_windows.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
control_plane/agents/: design.json
control_plane/prompts/: audit_agent.md  controller_agent.md  design_agent.md  scan_agent.md
control_plane/schemas/: run_manifest.schema.json
control_plane/workflows/: guardrail_policy.json  reasoning_profiles.json  runtime_policy.json  tool_registry.json
docs/: README.md  agent_roles.md  deliverables.md  evaluation_framework.md  evidence_traceability.md  product_positioning.md  scenarios.md
docs/archive/: README.md
docs/archive/delivery/: DELIVERY_SUMMARY.md  DELIVERY_SUMMARY_UI_SIMPLIFY.md  DELIVERY_SUMMARY_V5_1.md  DELIVERY_SUMMARY_V5_2.md  DELIVERY_SUMMARY_V5_3.md  DELIVERY_SUMMARY_V5_4.md  DELIVERY_SUMMARY_V5_8.md  DELIVERY_SUMMARY_V5_9.md  DELIVERY_SUMMARY_V6_0.md  DELIVERY_SUMMARY_V6_2.md  DELIVERY_SUMMARY_V6_3.md  (+2 more)
docs/assets/: README.md
docs/maintainers/: README.md  github_readme_media.md  open_source_audit.md  public_release_checklist.md  release_process.md
docs/reference/: 01_architecture_review_v3.md  02_refactor_priorities.md  03_v4_1_architecture.md  04_guardrails_and_execution.md  05_responses_api_bridge.md  06_v3_to_v4_1_migration.md  07_agents_sdk_alignment.md  08_roadmap.md
examples/: README.md
examples/literature_review_pack/: evidence_matrix.csv  gap_analysis.md  research_question.md  search_strategy.md
examples/study_design_pack/: acceptance_checks.md  claim_graph.md  experiment_plan.md  risk_checklist.md
examples/writing_pack/: paper_outline.md  research_brief.md  reviewer_response_skeleton.md
projects/sample_joint_tri_compress_v4_1/: START_HERE.md
projects/sample_joint_tri_runtime_v4_2/: START_HERE.md
research_os/: __init__.py  actions.py  agents_sdk_bridge.py  bootstrap.py  cli.py  common.py  evaluators.py  executors.py  guardrails.py  migrate.py  orchestrator.py  planner.py  providers.py  reporting.py  scheduler.py  sqlite_sync.py  studio.py  studio_runtime.py  studio_ui.py  tools.py  ux.py  validation.py  webapp.py  workspace.py
research_os/_resources/: README.md  __init__.py
scripts/: generate_readme_assets.py  ros.py  sync_bundled_resources.py
templates/run/: output_manifest.json
tests/: test_public_release_surface.py  test_readme_media_assets.py  test_repository_hygiene.py  test_showcase_reporting.py  test_studio_flow.py  test_web_ui.py
(+132 files in other folders)
